--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "firebase-admin": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "streamifier": "^0.1.1"
   }
 }
