--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4",
+    "pdf-parse": "^1.1.1",
     "streamifier": "^0.1.1"
   }
 }
