--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "firebase-admin": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pdf-parse": "^1.1.1",
     "streamifier": "^0.1.1"
